<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PinActivity">
    <TextView
            android:id="@+id/pin_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/pin_label_text"
            app:layout_constraintBottom_toTopOf="@+id/pin_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.80" />

    <EditText
            android:id="@+id/pin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:ems="10"
            android:textSize="25sp"
            android:inputType="textPassword"
            android:autofillHints="pin"
            android:hint="@string/user_pin_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.20"
            android:enabled="false" />

    <TextView
            android:id="@+id/pin_helper_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/table_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pin_text"
            android:text="@string/pin_is_required"
            android:textColor="@color/text_view_error"
            android:visibility="gone"
            />
    <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pin_text"
            app:layout_constraintVertical_bias="0.15">

        <TableRow
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

            <Button
                    android:id="@+id/buttonNine"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:hint="@string/nine"
                    android:onClick="pinButtonClicked"
                    android:text="@string/nine" />

            <Button
                    android:id="@+id/buttonEight"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:hint="@string/eight"
                    android:onClick="pinButtonClicked"
                    android:text="@string/eight" />

            <Button
                    android:id="@+id/buttonSeven"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:hint="@string/seven"
                    android:onClick="pinButtonClicked"
                    android:text="@string/seven" />
        </TableRow>

        <TableRow
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

            <Button
                    android:id="@+id/buttonFour"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:hint="@string/four"
                    android:onClick="pinButtonClicked"
                    android:text="@string/four" />

            <Button
                    android:id="@+id/buttonFive"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:hint="@string/five"
                    android:onClick="pinButtonClicked"
                    android:text="@string/five" />

            <Button
                    android:id="@+id/buttonSix"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:hint="@string/six"
                    android:onClick="pinButtonClicked"
                    android:text="@string/six" />
        </TableRow>

        <TableRow
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

            <Button
                    android:id="@+id/buttonOne"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:hint="@string/one"
                    android:onClick="pinButtonClicked"
                    android:text="@string/one" />

            <Button
                    android:id="@+id/buttonTwo"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:hint="@string/two"
                    android:onClick="pinButtonClicked"
                    android:text="@string/two" />

            <Button
                    android:id="@+id/buttonThree"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:hint="@string/three"
                    android:onClick="pinButtonClicked"
                    android:text="@string/three" />
        </TableRow>

        <TableRow
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

            <Button
                    android:id="@+id/buttonZero"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:hint="@string/zero"
                    android:onClick="pinButtonClicked"
                    android:text="@string/zero" />

            <Button
                    android:id="@+id/buttonDelete"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="50sp"
                    android:layout_span="2"
                    android:hint="@string/button_delete"
                    android:onClick="deleteClicked"
                    android:text="@string/button_delete" />
        </TableRow>
    </TableLayout>

    <Button
            android:id="@+id/continue_device_load"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:drawableRight="@drawable/ic_next"
            android:gravity="center"
            android:text="@string/continue_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/table_layout"
            app:layout_constraintVertical_bias="1.0"
            android:onClick="nextClicked" />
    <FrameLayout android:id="@+id/progress_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/black_overlay"
            android:visibility="gone">
        <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>