<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TOTPActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="100sp">
        <TextView android:id="@+id/instructions_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tap_to_generate" />
        <TextView android:id="@+id/pin_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_at_rest"
                android:textSize="70sp"
                android:onClick="onPinTextClicked" />
        <TextView android:id="@+id/counter_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/counter_at_rest"
                android:layout_gravity="end"
                android:layout_marginEnd="10sp" />
    </LinearLayout>

    <ImageButton android:id="@+id/stop_counter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/closebutton"
            android:layout_gravity="bottom|end"
            android:onClick="onStopClicked"
            android:background="#FFFFFF"
            />

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>